# 3dgames-in-rust

./: README.md
hole-in-the-wall-main/: Cargo.toml  savefile.txt
hole-in-the-wall-main/content/: cube.mtl  floor.mtl  glass-box.mtl  load.mtl  score0.mtl  score1.mtl  score2.mtl  score3.mtl  score4.mtl  score5.mtl  score6.mtl  score7.mtl  score8.mtl  score9.mtl  start.mtl  wall.mtl
hole-in-the-wall-main/engine3d/: Cargo.toml
hole-in-the-wall-main/engine3d/src/: assets.rs  camera.rs  collision.rs  geom.rs  lib.rs  model.rs  render.rs  scores.rs  text.rs
hole-in-the-wall-main/src/: main.rs
